# OI-and-CMs

./: .gitignore  Ftract.ipynb  LICENSE  README.md  ci_matrix_234.pkl  communication_causation.ipynb  core_periphery_labels.npy  coreness.npy  data.pickle  fitting_dynamics.ipynb  fitting_human_dynamics.ipynb  hopf_influence_gradient.mat  hopf_residual_gradient.mat  hopf_zscore_gradient.mat  influence_gradient.mat  latticeSC.txt  macaqueFC  macaqueSC  model_comparison.ipynb  mouseFC  mouseSC  pyproject.toml  requirements.txt  residual_gradient.mat  shapley_efficiency.mat  simulations.py  simulations_hopf_model.py  simulations_linear.py  sneppenSC.txt  utils.py  visual_config.py  visualization.m  zscore_gradient.mat
results/communication_models/: com_mat_DE.txt  com_mat_NE.txt  com_mat_SI.txt  com_mat_SPE.txt
to explore/: TE_human.pkl  information_dynamics.ipynb  shapley_efficiency.mat  simulate_information_dynamics.py
